2008-01-17
	* Fixed bug 1869454: Fails with Time ramining: -- (0 seconds).

2007-11-22
	* Fixed bug 1835531, segfault on bid history.

2007-10-23
	* Fixed bug 1818692, get srcId ViewItem when bidding on closed auction.

2007-10-04
	* 2.17.1 released.
	* Fixed bug 1807254, unknown time interval "Refresh".

2007-10-02
	* 2.17.0 released.

2007-10-01
	* Changed to  work with eBay's new bid history page (bug 1782953)
	* Use configurable hosts in all URLs (bug 1782954)
	* Add calls to bugReport() for many error in parsing the bid
	  history.  Hopefully this will allow quicker response to new
	  bid history page changes.
	* Modified configure's libcurl check (patch 1718317)

2007-06-08
	* Fixed bug 1733869, recognize error message when seller ends
	  auction early.

2007-05-21
	* Fix segmentation fault caused by auctions with no bids and a
	  starting bid of $200 or more.

2007-04-30
	* Fix for bug 1710376.  Bid history parsing error on auction with
	  no bids.

2007-04-02
	* Added captcha error.
	* 2.16.1 released.

2007-03-28
	* 2.16.0 released.
	* Add support for bid history without bidder name

2006-12-19
	* Added note about requirement for default column order with -m option.

2006-11-27
	* Fixed buyer & bidding history bug (need to skip over buyer history).
	* Fixed problem with bug reports.  HTTP buffer sometimes overwritten
	  by version number.

2006-11-13
	* Fixed myItems (-m) option.  eBay change tableName to "Id"

2006-11-08
	* Fix handling of URL escapes in username.

2006-11-04
	* 2.15.0 released.
	* Fix bug 1579311 (and a million others), eBay changed the bid history
	  page again.
	* Implemented feature request 1587259, handling -i without username
	  or password.
	* Fix bug 1574881, bid increment comparison not always correct.

2006-09-05
	* Fix for dutch auction parsing?

2006-01-05
	* Fix bug 1352595, esniper does not encode password in URLs

2005-10-19
	* 2.14.0 released.
	* Added version check.
	* Fix bug 1330486, login bug causes crash.

2005-10-12